Add Soy template compilation to the mix.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src="pifuxelck.js"></script>
+    <script src="pifuxelck-templates.js"></script>
   </head>
   <body>
   </body>
