Integrate soy with build system

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="pifuxelck.js"></script>
     <script src="pifuxelck-templates.js"></script>
   </head>
   <body>
-  Login
-  <input>
-  <input>
+  <div id="content" class="content">
+  </div>
   </body>
 </html>
