--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,11 +1,25 @@
 <html>
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="pifuxelck.js"></script>
-    <script src="pifuxelck-templates.js"></script>
   </head>
   <body>
-  <div id="content" class="content">
+  <div class="content primary-background">
+    <div class="hero">
+      <div class="hero-row">
+        <input placeholder="Username" id="username" type="text" class="text big full" />
+      </div>
+      <div class="hero-row">
+        <input placeholder="Password" id="password" type="password" class="text big full" />
+      </div>
+      <div class="hero-row">
+        <input value="Login" id="login" type="submit" class="button big full" />
+      </div>
+      <div class="hero-row">
+        <input value="Join" id="join" type="button" class="button big full" />
+      </div>
+    </div>
   </div>
   </body>
 </html>
