Successfully load history.
Drawings are currently not rendered.

--- a/src/html/history.html
+++ b/src/html/history.html
@@ -12,19 +12,9 @@
       <a href="contacts.html" class="navbar-entry">Contacts</a>
     </div>
 
-    <div class="grid">
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
+    <div id="grid" class="grid">
     </div>
   </div>
-  <script>new pifuxelck.controller.IndexController();</script>
+  <script>new pifuxelck.controller.HistoryController();</script>
   </body>
 </html>
