Render the first drawing as a preview for history.

--- a/src/html/game.html
+++ b/src/html/game.html
@@ -1,4 +1,3 @@
-<html>
   <head>
     <link href='http://fonts.googleapis.com/css?family=Roboto:300,500' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -7,14 +6,13 @@
   <body>
   <div class="content">
     <div class="navbar">
-      <a href="history.html" class="navbar-header">History</a>
+      <a href="history.html" class="navbar-header">Game</a>
       <a href="inbox.html" class="navbar-entry">Inbox</a>
+      <a href="history.html" class="navbar-entry">History</a>
       <a href="contacts.html" class="navbar-entry">Contacts</a>
     </div>
 
-    <div id="grid" class="grid">
-    </div>
   </div>
-  <script>new pifuxelck.controller.HistoryController();</script>
+  <script>new pifuxelck.controller.GameController();</script>
   </body>
 </html>
