wip rendering games

--- a/src/html/game.html
+++ b/src/html/game.html
@@ -12,6 +12,8 @@
       <a href="contacts.html" class="navbar-entry">Contacts</a>
     </div>
 
+    <div id="grid" class="grid">
+    </div>
   </div>
   <script>new pifuxelck.controller.GameController();</script>
   </body>
