--- a/src/html/draw.html
+++ b/src/html/draw.html
@@ -32,7 +32,7 @@
       </div>
     </div>
 
-    <div class="fab"><a href="#">></a></div>
+    <div class="fab"><a id='fab-button' href="#">></a></div>
   </div>
   <script>new pifuxelck.controller.DrawController();</script>
   </body>
