--- a/src/html/newgame.html
+++ b/src/html/newgame.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="list-header">
-      <input placeholder="Describe a scene..." id="label" class="big text full darktext" />
+      <input placeholder="Describe a scene..." id="label" class="big full darktext" />
     </div>
     <div class="list">
       <div class="list-element">SWPhantom</div>
