--- a/src/html/newgame.html
+++ b/src/html/newgame.html
@@ -14,20 +14,17 @@
     </div>
 
     <div class="list-header">
-      <input placeholder="Describe a scene..." id="label" class="big full darktext" />
+      <input placeholder="Describe a scene..."
+             id="label"
+             class="big full darktext" />
     </div>
-    <div class="list">
-      <div class="list-element">SWPhantom</div>
-      <div class="list-element">cosmo</div>
-      <div class="list-element">graham</div>
-      <div class="list-element">jesse</div>
-      <div class="list-element">will</div>
+    <div id="contacts-list" class="list">
     </div>
 
-    <div class="fab"><a href="newgame.html">></a></div>
+    <div id="fab" class="fab"><a href="#">></a></div>
 
   </div>
-  <script>new pifuxelck.controller.IndexController();</script>
+  <script>new pifuxelck.controller.NewGameController();</script>
   </body>
 </html>
 
