Add inbox controller
Almost a complete working game, just need the ability to label
drawings.

--- a/src/html/draw.html
+++ b/src/html/draw.html
@@ -13,6 +13,8 @@
       <a href="contacts.html" class="navbar-entry">Contacts</a>
     </div>
 
+    <div id="drawing-label" class="drawing-label darktext"></div>
+
     <div id="drawing-container" class="drawing-container">
       <div id="overlay" class="drawing-overlay drawing-overlay-hidden"></div>
       <div id="drawing" class="drawing"></div>
