--- a/src/html/inbox.html
+++ b/src/html/inbox.html
@@ -12,22 +12,11 @@
       <a href="contacts.html" class="navbar-entry">Contacts</a>
     </div>
 
-    <div class="grid">
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
-      <div class="grid-element"></div>
-    </div>
+    <div id="grid" class="grid"></div>
 
     <div class="fab"><a href="newgame.html">+</a></div>
 
   </div>
-  <script>new pifuxelck.controller.IndexController();</script>
+  <script>new pifuxelck.controller.InboxController();</script>
   </body>
 </html>
