--- a/src/html/game.html
+++ b/src/html/game.html
@@ -12,7 +12,7 @@
       <a href="contacts.html" class="navbar-entry">Contacts</a>
     </div>
 
-    <div id="grid" class="grid">
+    <div id="grid" class="game-list">
     </div>
   </div>
   <script>new pifuxelck.controller.GameController();</script>
